--- a/apiMonitoring/package.json
+++ b/apiMonitoring/package.json
@@ -1,6 +1,9 @@
 {
   "name": "apimonitoring",
   "version": "0.0.0",
+  "engines": {
+    "node": "10.15.x"
+  },
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
